# SysMon

./: .gitignore  README.md  pyproject.toml
docs/: design.md
src/: __init__.py  collector.py  data_classes.py  display.py  logger.py  main.py
tests/: test_collector.py  test_logger.py
